2003-05-27  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpdata.c:
	    Examples in RFC 2034 weren't the best possible, practice has
	    shown, that "250 2.6.0 .." isn't quite what is intended.
	    Sending now (like sendmail) "250 2.0.0 ..."

	* include/shmmib.h, scheduler/Makefile.in, scheduler/mailq.inc,
	  scheduler/scheduler.h, smtpserver/smtpcmds.c, smtpserver/smtphelp.c,
	  smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  transports/smtp/smtp.c:
	    More simpleish counters and gauges...

	* transports/smtp/smtp.c, include/shmmib.h, scheduler/mailq.inc:
	    Count outgoing sessions where we use PIPELINING.

	* scheduler/scheduler.c:
	    Fix the  LogFreeSpace-kB-G  to be filled (instead of
	    overwriting  SpoolFreeSpace-kB-G !)

	* include/shmmib.h, transports/smtp/smtp.c, scheduler/mailq.inc:
	    Added smtp TA process creation counter, and a gauge to
	    observe how many there are running in parallel.

2003-05-26  Matti Aarnio  <mea@zmailer.org>

	* bin/mkdep.in, bin/mklibdep.in, compat/rmail/Makefile.in,
	  compat/sendmail/Makefile.in, lib/Makefile.in, libc/Makefile.in,
	  libident/Makefile.in, libresolv/Makefile.in, libsh/Makefile.in,
	  router/Makefile.in, router/libdb/Makefile.in, scheduler/Makefile.in,
	  sfio/Makefile.in, smtpserver/Makefile.in,
	  transports/errormail/Makefile.in, transports/expirer/Makefile.in,
	  transports/fuzzyalias/Makefile.in, transports/hold/Makefile.in,
	  transports/libta/Makefile.in, transports/mailbox/Makefile.in,
	  transports/reroute/Makefile.in, transports/sm/Makefile.in,
	  transports/smtp/Makefile.in, utils/makedb/Makefile.in,
	  utils/vacation/Makefile.in:
	    Fixed the "make depend" processing, now it works also when
	    compiling in "adjacent directory" (tested only in that, though..)

	* include/libz.h, include/shmmib.h, lib/fdstatfs.c, router/daemonsub.c,
	  lib/zshmmibattach.c, router/rfc822.c, scheduler/mailq.c,
	  scheduler/mq2.c, scheduler/scheduler.c, scheduler/threads.c,